--- a/css/main.scss
+++ b/css/main.scss
@@ -1,14 +1,17 @@
 body, html {
     height: 100%;
+    
 }
 
 body {
+    background-color: red($color: #991e1e);
     margin: 0;
     font-family: 'Monsterrat';
 }
 
 h1 {
     margin: 5rem;
+
 }
 
     .row {
